--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ ul.kolors li {
   -moz-background-origin: border;
   background-origin: border-box; }
 
-ul.kolors li.active span {
+ul.kolors li.kactive span {
   background: url("../images/bg-components.png") no-repeat -126px -23px;
   width: 12px;
   height: 10px;
@@ -35,16 +35,8 @@ ul.kolors li.active span {
 ul.kolors li:hover {
   border: 4px solid rgba(0, 0, 0, 0.2); }
 
-.input {
-  width: 440px;
-  float: left;
-  padding-bottom: 10px; }
 
-
-div.input {
-  padding-bottom: 20px; }
-
-div.input ul {
+div ul {
   display: inline-block;
   height: 32px !important;
   border-radius: 4px;
